fixed modal on small devices 1.3

--- a/src/index.css
+++ b/src/index.css
@@ -444,7 +444,7 @@ body {
 
 .list-item__subtitle {
   
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .list-item__amount {
